--- a/03_flow_babel_webpack/package.json
+++ b/03_flow_babel_webpack/package.json
@@ -1,6 +1,8 @@
 {
   "name": "01",
   "version": "1.0.0",
+  "keywords": [],
+  "description": "",
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
@@ -18,7 +20,5 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
-  "keywords": [],
-  "description": ""
+  "license": "ISC"
 }
